8282511: Use fixed certificate validation date in SSLExampleCert template
Backport-of: 268fa693188b685de6289927ee5a1e99473a50f6